Pushed hidden svg element down so it no longer covers link.

--- a/style.scss
+++ b/style.scss
@@ -33,6 +33,7 @@ body {
 
 #social {
   margin-top: 20px;
+  overflow: hidden;
   .twitter-share-button {
     float: left;
     margin-left: 10px;
